# sherlock-ohms

./: .gitignore  LINKEDIN_ARTICLE.md  README.md  main.py  pyproject.toml
scripts/: capture_screenshot.py  generate_charts.py
src/: Home.py  agent.py  app.py  etl.py
src/components/: consumption_dashboard.py  financial_flow.py  public_lighting.py  taxometer.py
src/config/: tax_rules.py
src/database/: __init__.py  manager.py
src/pages/: dashboard.py  detective.py  help.py  raw_data.py
src/prompts/: energy_agent.md
src/services/: agent.py  etl.py  extractor.py  llm_client.py  logger.py  unlocker.py
src/views/: dashboard.py  data_explorer.py  help.py  investigation.py
tests/: conftest.py  test_database.py  test_helpers.py  test_standardize.py  test_tax_rules.py
