[project]
name = "sherlock-ohms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
lint = "ruff check ."
format = "ruff format ."
test = "pytest ."
run = "python main.py"
pre_test = "task lint"
